# AI_Class

./: .gitnignore  CMakeLists.txt  main.cpp
Assignment00/src/: main.cpp
Assignment00/turnin/: CMakeLists.txt
Assignment1a/: CMakeLists.txt
Assignment1a/Writeup.pages/Metadata/: Properties.plist
Assignment1a/src/: Camera.hpp  Image.hpp  Vec3.hpp  main.cpp
Assignment1a/turnin/src/: main.cpp
Assignment1b/: README.md  examplefile.txt
Assignment1b/Writeup.pages/Data/: output.ppm
Assignment1b/Writeup.pages/Metadata/: DocumentIdentifier  Properties.plist
Assignment1b/src/: Basiclight.cpp  Camera.cpp  ImgSettings.cpp  Object.hpp  Phong.cpp  Vec3.hpp  main.cpp
Assignment1b/turnin/: README.txt
Assignment1b/turnin/src/: ImgSettings.hpp
Assignment1c/: CMakeLists.txt  ghost_tex.pbm
Assignment1c/src/: Ellipsoid.hpp  Image.cpp  ImgSettings.hpp  Light.cpp  Normal.hpp  Phong.hpp  Polygon.hpp  Sphere.hpp  Spotlight.hpp  Triangle.cpp  UvCoord.cpp  UvCoord.hpp  Vec3.cpp  Vec3.hpp  Vertex.hpp  main.cpp
Assignment1c/turnin/: output_sample.ppm
Assignment1d/: CMakeLists.txt
Assignment1d/src/: Camera.hpp  Ellipsoid.hpp  ImgSettings.hpp  Material.hpp  Object.cpp  Object.hpp  Phong.hpp  Polygon.hpp  Ray.cpp  Ray.hpp  Scene.cpp  Scene.hpp  SceneTree.cpp  SceneTree.hpp  Sphere.hpp  Spotlight.cpp  Texture.cpp  Texture.hpp  Triangle.hpp  UvCoord.hpp  Vec3.hpp  main.cpp
SeanLinAssignment1a/: CMakeLists.txt  snowman.ppm  snowman.txt
SeanLinAssignment1a/src/: Ellipsoid.hpp  Material.hpp  Object.hpp  Sphere.cpp  Sphere.hpp  main.cpp
SeanLinAssignment1b/: CMakeLists.txt
SeanLinAssignment1b/src/: Basiclight.hpp  Camera.hpp  Entity.cpp  Entity.hpp  Phong.hpp
SeanLinAssignment1c/: CMakeLists.txt  README.txt
SeanLinAssignment1c/src/: Camera.hpp  Ellipsoid.cpp  Ellipsoid.hpp  Image.hpp  Light.hpp  Normal.cpp  Object.hpp  Phong.hpp  Pointlight.hpp  Polygon.cpp  Polygon.hpp  Sphere.hpp  Texture.hpp  Vertex.cpp  main.cpp
test/: CMakeLists.txt
test/src/: SomeClass.cpp  SomeClass.hpp  main.cpp
